<resources>
    <string name="app_name">OOP_11</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Menu</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_settings">Settings</string>

    <string name="font_text">Font size</string>
    <string name="width_text">Width (pixels)</string>
    <string name="line_spacing_text">Line spacing (pixels)</string>
    <string name="color_text">Color (rgb, 0-255)</string>
    <string name="edit_allow_text">Editing allowed</string>
    <string name="display_text">Display text</string>
    <string name="language_text">Language</string>

    <string name="spinner_hint">Change language</string>
</resources>
