<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsFragment">

    <LinearLayout
        android:id="@+id/fontLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:outlineProvider="none">

        <TextView
            android:id="@+id/fontText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/font_text"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/fontInput"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/widthLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/widthText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/width_text"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/widthInput"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lineSpacingLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/lineSpacingText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/line_spacing_text"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/lineSpacingInput"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/colorLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/colorText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/color_text"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/colorInputR"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="R"
            android:inputType="number" />

        <EditText
            android:id="@+id/colorInputG"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="G"
            android:inputType="number" />

        <EditText
            android:id="@+id/colorInputB"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:hint="B"
            android:inputType="number" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/editLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Switch
            android:id="@+id/editSwitch"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="7dp"
            android:layout_weight="1"
            android:gravity="start"
            android:showText="false"
            android:switchPadding="30dp"
            android:text="@string/edit_allow_text"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/displayLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/displayTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/display_text"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/displayInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/languageLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/languageText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/language_text"
            android:textColor="@android:color/secondary_text_light"
            android:textSize="24sp" />

        <Spinner
            android:id="@+id/langSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start|center_vertical" />
    </LinearLayout>
</LinearLayout>